--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Klara.JPG" alt="Klara Divisova profile picture" height="300"></td>
+      <td><img src="https://i.postimg.cc/D0mH8pvr/Klara.jpg" alt="Klara profile picture" height="300"></td>
       <td>
         <h1>Klara Divisova</h1>
         <p><em>Web development and UI/UX design student</em></p>
